<resources>
    <string name="app_name">My Application</string>
    <string name="login">Login Screen</string>
    <string name="pass">password</string>
    <string name="sign">Sign In</string>
    <string name="message_signup">dont have an account?</string>
    <string name="signup">SignUp</string>
    <string name="username">userName</string>
    <string name="call_fragment">Call Fragment</string>
    <string name="call">Call new user</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="context_menu">Context Menu</string>

</resources>