<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.sign.LoginActivity"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/purple_500"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/username"
        android:drawableStart="@drawable/ic_mail"
        android:drawablePadding="10dp"
        android:background="@drawable/reound_edittext"
        android:padding="15dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/pass"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:textSize="@dimen/_22ssp"
        android:inputType="textPassword"
        android:background="@drawable/reound_edittext"
        android:padding="15dp"/>
    <Button
        android:id="@+id/login_button_to_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:text="@string/sign"
        android:textAllCaps="false"
        android:background="@drawable/round_bt"
       />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_signup"
            android:layout_gravity="end"
            />
        <TextView
            android:id="@+id/tv_sign_login_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textColor="@color/purple_700"/>
    </LinearLayout>
</LinearLayout>